--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.1.3"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.1.3",
-    "react-scripts": "3.4.1"
+    "@types/jest": "^25.1.3",
+    "@types/node": "^13.7.6",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.3",
+    "react-scripts": "3.4.1",
+    "typescript": "^3.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
