--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@reduxjs/toolkit": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.1.3"
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,6 +18,7 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.3",
+    "@types/react-router-dom": "^5.1.3",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.2"
   },
