--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.3",
     "@types/react-router-dom": "^5.1.3",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^2.0.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "eslint './src/**/*.{ts,tsx}'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
