--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.2",
+    "gh-pages": "^2.2.0",
     "prettier": "^2.0.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.2"
@@ -36,6 +37,8 @@
     "build": "react-scripts build",
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -b master -r https://github.com/trusted-locals/trusted-locals.github.io",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
