--- a/.eslintrc
+++ b/.eslintrc
@@ -7,20 +7,19 @@
     "plugin:react/recommended",
     "prettier/@typescript-eslint"
   ],
-  "plugins": ["@typescript-eslint", "jsx-a11y", "prettier", "react"],
+  "plugins": ["@typescript-eslint", "jsx-a11y", "prettier", "react", "react-hooks"],
   "env": {
     "browser": true,
     "jasmine": true,
     "jest": true
   },
   "rules": {
-    "linebreak-style": "error",
     "@typescript-eslint/ban-ts-ignore": "off",
-    "@typescript-eslint/no-use-before-define": [
-      "error",
-      { "variables": false, "typedefs": false }
-    ],
-    "prettier/prettier": ["error", { "singleQuote": true }]
+    "@typescript-eslint/no-use-before-define": ["error", { "variables": false, "typedefs": false }],
+    "linebreak-style": "error",
+    "prettier/prettier": ["error", { "singleQuote": true }],
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "settings": {
     "react": {
