--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
   "rules": {
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/no-use-before-define": ["error", { "variables": false, "typedefs": false }],
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "linebreak-style": "error",
     "prettier/prettier": ["error", { "singleQuote": true }],
     "react-hooks/rules-of-hooks": "error",
