--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
   "env": {
     "browser": true,
     "jasmine": true,
-    "jest": true
+    "jest": true,
+    "node": true
   },
   "rules": {
     "@typescript-eslint/ban-ts-ignore": "off",
