--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Lint
         run: yarn lint
       - name: Test
-        run: CI=true yarn test
+        run: CI=true yarn test --passWithNoTests
   lighthouse-check:
     runs-on: ubuntu-latest
     steps:
