--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
   "plugins": ["@typescript-eslint", "jsx-a11y", "prettier", "react", "react-hooks"],
   "env": {
     "browser": true,
+    "es6": true,
     "jasmine": true,
     "jest": true,
     "node": true
