--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/core": "^0.6.1",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@react-hook/window-size": "^1.0.13",
     "@reduxjs/toolkit": "^1.3.0",
     "emotion-theming": "^10.0.27",
     "react": "^16.13.1",
