--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,8 @@
   },
   "rules": {
     "@typescript-eslint/ban-ts-ignore": "off",
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-use-before-define": ["error", { "variables": false, "typedefs": false }],
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "linebreak-style": "error",
