--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,7 @@
     "linebreak-style": "error",
     "prettier/prettier": ["error", { "singleQuote": true }],
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "error"
   },
   "settings": {
     "react": {
